Update interface to show individual ball scores

--- a/index.html
+++ b/index.html
@@ -15,16 +15,56 @@
   <input id="input-score-button" type="button" value="Submit score">
 
   <div id="scorecard">
-    <div id="frame-0"></div>
-    <div id="frame-1"></div>
-    <div id="frame-2"></div>
-    <div id="frame-3"></div>
-    <div id="frame-4"></div>
-    <div id="frame-5"></div>
-    <div id="frame-6"></div>
-    <div id="frame-7"></div>
-    <div id="frame-8"></div>
-    <div id="frame-9"></div>
+    <div id="frame-0">
+      <div id="frame-0-ball-1"></div>
+      <div id="frame-0-ball-2"></div>
+      <div id="frame-0-total"></div>
+    </div>
+    <div id="frame-1">
+      <div id="frame-1-ball-1"></div>
+      <div id="frame-1-ball-2"></div>
+      <div id="frame-1-total"></div>
+    </div>
+    <div id="frame-2">
+      <div id="frame-2-ball-1"></div>
+      <div id="frame-2-ball-2"></div>
+      <div id="frame-2-total"></div>
+    </div>
+    <div id="frame-3">
+      <div id="frame-3-ball-1"></div>
+      <div id="frame-3-ball-2"></div>
+      <div id="frame-3-total"></div>
+    </div>
+    <div id="frame-4">
+      <div id="frame-4-ball-1"></div>
+      <div id="frame-4-ball-2"></div>
+      <div id="frame-4-total"></div>
+    </div>
+    <div id="frame-5">
+      <div id="frame-5-ball-1"></div>
+      <div id="frame-5-ball-2"></div>
+      <div id="frame-5-total"></div>
+    </div>
+    <div id="frame-6">
+      <div id="frame-6-ball-1"></div>
+      <div id="frame-6-ball-2"></div>
+      <div id="frame-6-total"></div>
+    </div>
+    <div id="frame-7">
+      <div id="frame-7-ball-1"></div>
+      <div id="frame-7-ball-2"></div>
+      <div id="frame-7-total"></div>
+    </div>
+    <div id="frame-8">
+      <div id="frame-8-ball-1"></div>
+      <div id="frame-8-ball-2"></div>
+      <div id="frame-8-total"></div>
+    </div>
+    <div id="frame-9">
+      <div id="frame-9-ball-1"></div>
+      <div id="frame-9-ball-2"></div>
+      <div id="frame-9-total"></div>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
